modified inventory file

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,19 @@
-[aws]
+[ubuntu]
 
 #jenkinsnode
-13.235.48.124 ansible_user=ubuntu
-
-#terraformnode
-13.127.254.85 ansible_user=ec2-user
+13.235.48.124
 
 #dockernode
-43.205.239.189 ansible_user=ubuntu
+43.205.239.189 
 
+
+[redhat]
+
+#terraformnode
+13.127.254.85 
+
+[ubuntu:vars]
+ansible_user=ubuntu
+
+[redhat:vars]
+ansible_user=ec2-user
