--- a/provisioning/vars.yml
+++ b/provisioning/vars.yml
@@ -1,3 +1,4 @@
 managednode1_id: i-0ddddbb29cae34789
 managednode2_id: i-077e24e0e3d5bf6e5
 controlnode_id: i-098f3792493c97f1b
+aws_region: ap-south-1
